<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosidl_candb_adapter</name>
  <version>0.1.0</version>
  <description>
    API and scripts to parse Can Database files and convert them to .idl.
  </description>
  <maintainer email="biaggi.alessandro.official@gmail.com">Alessandro Biaggi</maintainer>
  <license>Apache License 2.0</license>
  <author email="biaggi.alessandro.official@gmail.com">Alessandro Biaggi</author>

  <url type="repository">https://github.com/AlessandroBiaggi/rosidl_candb</url>
  <url type="bugtracker">https://github.com/AlessandroBiaggi/rosidl_candb/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>python3</buildtool_depend>

  <buildtool_export_depend>ament_index_python</buildtool_export_depend>
  <buildtool_export_depend>python3</buildtool_export_depend>
  <buildtool_export_depend>python3-cantools-pip</buildtool_export_depend>
  <buildtool_export_depend>python3-empy</buildtool_export_depend>
  <buildtool_export_depend>rosidl_candb_pycommon</buildtool_export_depend>
  <buildtool_export_depend>rosidl_cli</buildtool_export_depend>

  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>python3-cantools-pip</exec_depend>
  <exec_depend>python3-empy</exec_depend>
  <exec_depend>rosidl_candb_pycommon</exec_depend>
  <exec_depend>rosidl_cli</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>
</package>
