[options.entry_points]
rosidl_cli.command.translate.extensions =
    arxml2idl = rosidl_candb_adapter.command:TranslateArxmlToIdl
    dbc2idl = rosidl_candb_adapter.command:TranslateDbcToIdl
    kcd2idl = rosidl_candb_adapter.command:TranslateKcdToIdl
    sym2idl = rosidl_candb_adapter.command:TranslateSymToIdl
    cdd2idl = rosidl_candb_adapter.command:TranslateCddToIdl
